2010-07-13  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/src/calFreeBusyService.js:
	(calFreeBusyListener.onResult) we invoke notifyResult even if
	"aResult" is null, to avoid breaking the chain of events.

2010-06-22  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/content/calendar-common-sets.js
	(calendarController.doCommand): the delete command is sometimes a
	"cmd_delete", directed at a different view than the calendar
	views. In that case, we must not display the confirmation dialog.
	Additionally, the confirmation dialog for event deletion would
	appear when deleting tasks, therefore with the wrong wording.

2010-06-14  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/content/clipboard.js (copyToClipboard): we
	ensure the recurrenceId attribute is set to null prior to copying
	the element to the clipboard, to avoid further parsing errors from
	the buggy ICS Parser provided with Lightning.

	* src/calendar/base/content/calendar-unifinder.js:
	(unifinderTreeView.removeItems): since the row indexes are not
	recomputed after each removal, they are stacked in an array which
	is sorted afterwards and then wandered backwards in order to
	perform the actual removal with the proper index.

2010-06-12  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/lightning/content/lightning.js: disabled the
	default value for "calendar.categories.names" as it is defined in
	the locale files and risk overriding the default value in other
	custom modules.

	* src/calendar/base/content/preferences/categories.js:
	(gCategoriesPane.init): extracted the categories initialisation
	code into its own method named "loadCategoryList".
	(gCategoriesPane.resetCategories): new action method that resets
	the categories list to the defaults if modified by the user.

2010-06-09  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/content/calendar-view-core.xml
	(calendar-editable-item.startEditing): don't attempt to hide the